commit 141c5b25aaecbd7204878c102285dc47c5455d6a Author: James Duncan <james.t.duncan@gmail.com> Date:   Thu Sep 9 00:39:45 2010 -0700

Changed colon to hyphen in format string for filename of playlists.

BUG:249376